@@ -1,1 +1,7 @@
 # javafx-guis
+
+The following are multiple GUI's that include a temperature converter, a cash register, a bmi calculator, and a currency converter (able to convert 4 currencies).
+
+The code requires the JavaFX library to be installed, and the following code to be put into the "VX Arguments" section in Run Configurations: --module-path "C:\Program Files\javafx-sdk-21.0.1\lib" --add-modules javafx.controls,javafx.media
+
+Additionally, this code was made in Eclipse, and in the Run Configurations >> VM Arguments, uncheck the setting "Use the -XX:+..."
